# Federated-Learning-LR_RF

./: README.md  dataset_processing.py  main.py
Logistic_federation/: ._README.md  ._visualize.bat  README.md  pyproject.toml  results.csv  results.json  visualize.bat
Logistic_federation/LogisticFederation/: client_app.py  custom_strategy.py  server_app.py
Logistic_federation/checkpoints/: global_model_round_1.pkl  global_model_round_10.pkl  global_model_round_10_param_0.npy  global_model_round_10_param_1.npy  global_model_round_1_param_0.npy  global_model_round_1_param_1.npy  global_model_round_2.pkl  global_model_round_2_param_0.npy  global_model_round_2_param_1.npy  global_model_round_3.pkl  global_model_round_3_param_0.npy  global_model_round_3_param_1.npy  global_model_round_4.pkl  global_model_round_4_param_0.npy  global_model_round_4_param_1.npy  global_model_round_5.pkl  global_model_round_5_param_0.npy  global_model_round_5_param_1.npy  global_model_round_6.pkl  global_model_round_6_param_0.npy  global_model_round_6_param_1.npy  global_model_round_7.pkl  global_model_round_7_param_0.npy  global_model_round_7_param_1.npy  global_model_round_8.pkl  global_model_round_8_param_0.npy  global_model_round_8_param_1.npy  global_model_round_9.pkl  global_model_round_9_param_0.npy  global_model_round_9_param_1.npy
Logistic_federation/data_cache/: partition_0_undersample_1.0.pkl  partition_10_undersample_1.0.pkl  partition_11_undersample_1.0.pkl  partition_12_undersample_1.0.pkl  partition_13_undersample_1.0.pkl  partition_14_undersample_1.0.pkl  partition_15_undersample_1.0.pkl  partition_16_undersample_1.0.pkl  partition_17_undersample_1.0.pkl  partition_18_undersample_1.0.pkl  partition_19_undersample_1.0.pkl  partition_1_undersample_1.0.pkl  partition_20_undersample_1.0.pkl  partition_21_undersample_1.0.pkl  partition_22_undersample_1.0.pkl  partition_23_undersample_1.0.pkl  partition_24_undersample_1.0.pkl  partition_2_undersample_1.0.pkl  partition_3_undersample_1.0.pkl  partition_4_undersample_1.0.pkl  partition_5_undersample_1.0.pkl  partition_6_undersample_1.0.pkl  partition_7_undersample_1.0.pkl  partition_8_undersample_1.0.pkl  partition_9_undersample_1.0.pkl
Logistic_federation/plots/: summary.csv
RF_federation/: README.md  pyproject.toml
Random_Forest_federation/: README.md  main.ipynb  pyproject.toml
Random_Forest_federation/new_new_new_federation/: __init__.py  client_app.py  our_strategy.py  server_app.py  task.py
Random_Forest_federation/results/: feature_importance.csv  rf_metrics_1742304850.csv
SVM_Logistic_federation/: README.md  VISUALIZATION_README.md  install_viz_deps.py  pyproject.toml  results.csv  results.json  visualize.bat  visualize_results.py
SVM_Logistic_federation/checkpoints/: global_model_round_50.pkl  global_model_round_50_param_0.npy  global_model_round_50_param_1.npy
SVM_Logistic_federation/new_new_federation/: server_app.py  task.py
SVM_Logistic_federation/plots/: summary.csv
SVM_federation/: README.md  global_model_latest.pkl  install_viz_deps.py  pyproject.toml  results.csv  results.json  visualize_results.py
SVM_federation/SVMFederation/: server_app.py
SVM_federation/checkpoints/: global_model_round_1.pkl  global_model_round_100.pkl  global_model_round_100_param_0.npy  global_model_round_100_param_1.npy  global_model_round_10_param_0.npy  global_model_round_10_param_1.npy  global_model_round_11.pkl  global_model_round_11_param_0.npy  global_model_round_11_param_1.npy  global_model_round_12.pkl  global_model_round_12_param_0.npy  global_model_round_12_param_1.npy  global_model_round_13.pkl  global_model_round_13_param_0.npy  global_model_round_13_param_1.npy  global_model_round_14.pkl  global_model_round_14_param_0.npy  global_model_round_14_param_1.npy  global_model_round_15.pkl  global_model_round_15_param_0.npy  global_model_round_15_param_1.npy  global_model_round_16.pkl  global_model_round_16_param_0.npy  global_model_round_16_param_1.npy  global_model_round_17.pkl  global_model_round_17_param_0.npy  global_model_round_17_param_1.npy  global_model_round_18.pkl  global_model_round_18_param_0.npy  global_model_round_18_param_1.npy  global_model_round_19.pkl  global_model_round_19_param_0.npy  global_model_round_19_param_1.npy  global_model_round_1_param_0.npy  global_model_round_1_param_1.npy  global_model_round_2.pkl  global_model_round_20.pkl  global_model_round_20_param_0.npy  global_model_round_20_param_1.npy  global_model_round_21.pkl  (+259 more)
SVM_federation/data_cache/: global_scaler.pkl  partition_0_undersample_2.0.pkl  partition_1_undersample_2.0.pkl  partition_20_undersample_2.0.pkl  partition_21_undersample_2.0.pkl  partition_22_undersample_2.0.pkl  partition_23_undersample_2.0.pkl  partition_24_undersample_2.0.pkl  partition_2_undersample_2.0.pkl
SVM_federation/plots/: summary.csv
(+43 files in other folders)
