[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SVMFederation"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "scikit-learn>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "n3p7un"

[tool.flwr.app.components]
serverapp = "SVMFederation.server_app:app"
clientapp = "SVMFederation.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
penalty = "l2"
local-epochs = 15
loss = 'log_loss' # Change to 'hinge' for SVM or modified_huber 
num-clients = 25
balance-method = "undersample" # or: "oversample" | "none"
sampling-ratio = 2.0 # if undersample->ratio=negative/positive; if oversample ratio=mult minority class

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 25